--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
-    "stream-browserify": "^3.0.0",
-    "webpack": "^5.89.0"
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
