--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@fvilers/disable-react-devtools": "^1.3.0",
     "@web5/api": "^0.8.2",
-    "@web5/credentials": "^0.3.2",
-    "@web5/crypto": "^0.2.3",
+    "@web5/credentials": "^0.3.1",
+    "@web5/crypto": "^0.2.2",
     "@web5/dids": "^0.2.2",
     "crypto-browserify": "^3.12.0",
+    "nodemailer": "^6.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
