--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -15,14 +15,17 @@
     "@web5/credentials": "^0.3.1",
     "@web5/crypto": "^0.2.2",
     "@web5/dids": "^0.2.2",
+    "classnames": "^2.3.2",
     "crypto-browserify": "^3.12.0",
+    "formik": "^2.4.5",
     "nodemailer": "^6.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
-    "stream-browserify": "^3.0.0"
+    "stream-browserify": "^3.0.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -35,6 +38,6 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.5",
-    "vite": "^5.0.0"
+    "vite": "^4.4.0"
   }
 }
