--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "@fvilers/disable-react-devtools": "^1.3.0",
+    "@react-email/button": "0.0.13",
+    "@react-email/html": "0.0.7",
     "@web5/api": "^0.8.2",
     "@web5/credentials": "^0.3.1",
     "@web5/crypto": "^0.2.2",
     "@web5/dids": "^0.2.2",
     "crypto-browserify": "^3.12.0",
-    "nodemailer": "^6.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-email": "1.10.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
